# AlgorithmsLabs

./: README.md  insertion_sort.cpp
first/: README.md  insertion_sort.h  main.cpp  profile.h  test.cpp
second/: CMakeLists.txt  KMPSearch.cpp  KMPSearch.h  README.md  main.cpp
second/Google_tests/: KMPSearch.test.cpp
second/Google_tests/lib/: README.md
second/KMPSearch/Google_tests/: CMakeLists.txt
second/interpolation_search/: CMakeLists.txt  interpolation_search.cpp  interpolation_search.h  main.cpp
second/interpolation_search/Google_tests/: CMakeLists.txt  interpolation_search.test.cpp
